infrastructure/argocd/server/helm/gateway/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-route
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
      sectionName: https # TLS terminates at the Cilium Gateway
  hostnames:
    - "argocd.dev.test"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
